--- a/Keysoc/Base.lproj/Main.storyboard
+++ b/Keysoc/Base.lproj/Main.storyboard
@@ -12,18 +12,59 @@
         <!--Settings-->
         <scene sceneID="tEd-44-7qz">
             <objects>
-                <viewController id="2pp-on-aum" customClass="searchViewController" customModule="Keysoc" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="2pp-on-aum" customClass="settingViewController" customModule="Keysoc" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Gra-yK-yOd">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="LTG-XW-lwl">
+                                <rect key="frame" x="0.0" y="59" width="393" height="710"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="Lxk-h5-IcZ" customClass="settingTableCell" customModule="Keysoc" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Lxk-h5-IcZ" id="I5v-6n-HqG">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7zS-u8-Ycg">
+                                                    <rect key="frame" x="30" y="11.333333333333336" width="333" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="7zS-u8-Ycg" firstAttribute="centerY" secondItem="I5v-6n-HqG" secondAttribute="centerY" id="Cv9-WK-Mqh"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="7zS-u8-Ycg" secondAttribute="trailing" constant="10" id="rIt-R3-dBS"/>
+                                                <constraint firstItem="7zS-u8-Ycg" firstAttribute="leading" secondItem="I5v-6n-HqG" secondAttribute="leadingMargin" constant="10" id="yyT-vS-FRd"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="label" destination="7zS-u8-Ycg" id="5zz-v0-4Ut"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="RJZ-hq-vlG"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="LTG-XW-lwl" firstAttribute="leading" secondItem="RJZ-hq-vlG" secondAttribute="leading" id="Ra9-gS-vHc"/>
+                            <constraint firstItem="LTG-XW-lwl" firstAttribute="top" secondItem="RJZ-hq-vlG" secondAttribute="top" id="Wvw-Kd-QsK"/>
+                            <constraint firstItem="RJZ-hq-vlG" firstAttribute="trailing" secondItem="LTG-XW-lwl" secondAttribute="trailing" id="YgO-1t-JXK"/>
+                            <constraint firstItem="RJZ-hq-vlG" firstAttribute="bottom" secondItem="LTG-XW-lwl" secondAttribute="bottom" id="jlS-hj-H8K"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Settings" image="gearshape.fill" catalog="system" selectedImage="gearshape.fill" id="If0-Qk-AyP"/>
+                    <connections>
+                        <outlet property="tableview" destination="LTG-XW-lwl" id="cUq-qb-vjc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qHG-kc-C4n" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="595" y="677"/>
+            <point key="canvasLocation" x="595" y="842"/>
         </scene>
         <!--Songs-->
         <scene sceneID="9Wj-D4-58J">
@@ -218,7 +259,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qLH-22-pFu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="594.6564885496183" y="-278.16901408450707"/>
+            <point key="canvasLocation" x="595" y="-542"/>
         </scene>
         <!--Filter View Controller-->
         <scene sceneID="mTZ-ry-5YJ">
@@ -478,7 +519,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y32-2u-g0v" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1482" y="143"/>
+            <point key="canvasLocation" x="595" y="130"/>
         </scene>
     </scenes>
     <resources>
