--- a/Keysoc/Base.lproj/Main.storyboard
+++ b/Keysoc/Base.lproj/Main.storyboard
@@ -260,17 +260,28 @@
                                     <constraint firstAttribute="bottom" secondItem="eCY-wd-bIh" secondAttribute="bottom" id="xfp-Yg-DSu"/>
                                 </constraints>
                             </view>
-                            <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2dz-pp-mvy">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2dz-pp-mvy">
                                 <rect key="frame" x="0.0" y="59" width="393" height="710"/>
                                 <subviews>
+                                    <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nnS-KA-nEm">
+                                        <rect key="frame" x="146.66666666666666" y="305" width="100" height="100"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="CrO-xK-2GL"/>
+                                            <constraint firstAttribute="width" constant="100" id="EIg-Tz-9ru"/>
+                                        </constraints>
+                                    </view>
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="egn-7P-68p">
                                         <rect key="frame" x="178" y="336.66666666666669" width="37" height="37"/>
+                                        <color key="color" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </activityIndicatorView>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="egn-7P-68p" firstAttribute="centerY" secondItem="2dz-pp-mvy" secondAttribute="centerY" id="XKJ-HM-zXg"/>
-                                    <constraint firstItem="egn-7P-68p" firstAttribute="centerX" secondItem="2dz-pp-mvy" secondAttribute="centerX" id="rqe-Kj-5KI"/>
+                                    <constraint firstItem="nnS-KA-nEm" firstAttribute="centerX" secondItem="2dz-pp-mvy" secondAttribute="centerX" id="62y-ce-kgE"/>
+                                    <constraint firstItem="egn-7P-68p" firstAttribute="centerY" secondItem="2dz-pp-mvy" secondAttribute="centerY" id="ChB-2r-fvt"/>
+                                    <constraint firstItem="nnS-KA-nEm" firstAttribute="centerY" secondItem="2dz-pp-mvy" secondAttribute="centerY" id="KvO-ZX-OMH"/>
+                                    <constraint firstItem="egn-7P-68p" firstAttribute="centerX" secondItem="2dz-pp-mvy" secondAttribute="centerX" id="MdN-9w-Hfr"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -295,6 +306,7 @@
                         <outlet property="searchBar" destination="eCY-wd-bIh" id="VnR-Lm-V6y"/>
                         <outlet property="tableView" destination="P4z-6P-k9L" id="7iH-Dv-unc"/>
                         <outlet property="view_loading" destination="2dz-pp-mvy" id="txE-io-rcf"/>
+                        <outlet property="view_loading_subview" destination="nnS-KA-nEm" id="0kD-zG-bhk"/>
                         <segue destination="tuc-yC-YPw" kind="presentation" identifier="showFilter" id="xnd-Cu-1Dq"/>
                     </connections>
                 </viewController>
@@ -468,7 +480,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fWm-35-E1N">
                                                     <rect key="frame" x="110" y="21" width="253" height="29"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ydT-BC-Gv9">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ydT-BC-Gv9">
                                                             <rect key="frame" x="10" y="4.3333333333333321" width="233" height="20.333333333333332"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                             <nil key="textColor"/>
@@ -485,7 +497,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mx1-6C-lhb">
                                                     <rect key="frame" x="110" y="60" width="253" height="29"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNW-Vh-rqf">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNW-Vh-rqf">
                                                             <rect key="frame" x="10" y="4.3333333333333286" width="233" height="20.333333333333332"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
